<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dateLabelSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dateValueSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/dateLabelSheet"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timeLabelSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateLabelSheet" />

            <TextView
                android:id="@+id/timeValueSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/timeLabelSheet"
                app:layout_constraintTop_toBottomOf="@+id/dateLabelSheet" />

            <TextView
                android:id="@+id/foodLabelSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/food"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeLabelSheet" />

            <TextView
                android:id="@+id/foodValueSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/foodLabelSheet"
                app:layout_constraintTop_toBottomOf="@+id/timeLabelSheet" />

            <TextView
                android:id="@+id/caloriesLabelSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/calories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodLabelSheet" />

            <TextView
                android:id="@+id/caloriesValueSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                app:layout_constraintStart_toEndOf="@+id/caloriesLabelSheet"
                app:layout_constraintTop_toBottomOf="@+id/foodLabelSheet" />

            <TextView
                android:id="@+id/caloriesUnitSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cal"
                app:layout_constraintStart_toEndOf="@+id/caloriesValueSheet"
                app:layout_constraintTop_toBottomOf="@+id/foodLabelSheet" />

            <TextView
                android:id="@+id/categoryLabelSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caloriesLabelSheet" />

            <TextView
                android:id="@+id/categoryValueSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/categoryLabelSheet"
                app:layout_constraintTop_toBottomOf="@+id/caloriesLabelSheet" />

            <TextView
                android:id="@+id/noteLabelSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/note"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryLabelSheet" />

            <TextView
                android:id="@+id/noteValueSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/noteLabelSheet"
                app:layout_constraintTop_toBottomOf="@+id/categoryLabelSheet" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteLabelSheet" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>