<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonLeft_drawableTintColor="?colorOnPrimary"
        app:buttonRight_drawableTintColor="?colorOnPrimary"
        app:expandIconColor="?colorOnPrimary"
        app:primaryColor="?colorPrimary"
        app:selectedItem_background="@drawable/circle_white_solid_background"
        app:selectedItem_textColor="?colorPrimary"
        app:textColor="?colorOnPrimary"
        app:todayItem_background="@drawable/circle_white_stroke_background"
        app:todayItem_textColor="?colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mealsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/meals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <TextView
        android:id="@+id/numOfMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/mealsLabel"
        app:layout_constraintTop_toTopOf="@+id/mealsLabel" />

    <TextView
        android:id="@+id/snacksLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/snacks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealsLabel" />

    <TextView
        android:id="@+id/numOfSnacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/snacksLabel"
        app:layout_constraintTop_toTopOf="@+id/snacksLabel" />

    <TextView
        android:id="@+id/caloriesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/total_calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snacksLabel" />

    <TextView
        android:id="@+id/totalCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/caloriesLabel"
        app:layout_constraintTop_toBottomOf="@+id/snacksLabel" />

    <TextView
        android:id="@+id/caloriesUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal"
        app:layout_constraintStart_toEndOf="@+id/totalCalories"
        app:layout_constraintTop_toBottomOf="@+id/snacksLabel" />

    <TextView
        android:id="@+id/logsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/logs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mealLogs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logsLabel" />

    <TextView
        android:id="@+id/noMealLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/no_meals_were_logged"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logsLabel" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="Add Meal Log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"/>
</androidx.constraintlayout.widget.ConstraintLayout>